# -workflows

./: CMakeLists.txt  README.md  arithmetic.cpp  python-tests.yml
.github/workflows/: python-tests.yml
python/arithmetic_pkg/: __init__.py
tests/: test1.py
